@@ -51,12 +51,12 @@ class AdminLog
         else
         {
             $query = "INSERT INTO {$db->prefix}logs VALUES (NULL, 0, :logtype, NOW(), :data)";
-            $result = $db->prepare($query);
+            $prep = $db->prepare($query);
             if ($result !== false) // If the database is not live, this will return false
             {                      // so we should not attempt to write (or it will fail silently)
-                $result->bindParam(':logtype', $log_type, PDO::PARAM_STR);
-                $result->bindParam(':data', $data, PDO::PARAM_STR);
-                $result->execute();
+                $prep->bindParam(':logtype', $log_type, PDO::PARAM_STR);
+                $prep->bindParam(':data', $data, PDO::PARAM_STR);
+                $result = $prep->execute();
             }
 
             return $result;
